old_tests/tests/lean/1952.lean.expected.out
1952.lean:13:17: error: invalid structure value { ... }, field 'fn' was not provided
1952.lean:13:28: error: type mismatch at field 'fn_ax'
  λ (x : ℕ), rfl
has type
  ∀ (x : ℕ), ?m_2[x] = ?m_2[x]
but is expected to have type
  ∀ (a : ℕ), ⁇ a = a
1952.lean:16:38: error: invalid structure value { ... }, field 'mul' was not provided
1952.lean:16:38: error: invalid structure value { ... }, field 'one' was not provided
1952.lean:16:38: error: invalid structure value { ... }, field 'one_mul' was not provided
1952.lean:16:38: error: invalid structure value { ... }, field 'mul_one' was not provided
1952.lean:16:38: error: invalid structure value { ... }, field 'inv' was not provided
1952.lean:16:38: error: invalid structure value { ... }, field 'mul_left_inv' was not provided
1952.lean:16:53: error: type mismatch at field 'mul_assoc'
  λ (x y z : α), rfl
has type
  ∀ (x y z : α), ?m_2[x, y, z] = ?m_2[x, y, z]
but is expected to have type
  ∀ (a b c : α), a * b * c = a * (b * c)
